--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
   gap:10px
 }
 .topnav{
-  background-color: beige;
+  background-color: rgb(153, 78, 224);
   grid-area: 1/1/2/13;
   flex-wrap: wrap;
   align-content: center;
